pkg/lang/testdata/ub/outputs/invalid/duplicate-description.ub
outputs: {
  a: { value: input.x, description: 'one', description: 'two' }
}
